--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -1,7 +1,5 @@
 name: Execution Flow
 on: push
-env:
-  SQL_DB: abc
 jobs:
   Lint:
     runs-on: ubuntu-latest
@@ -25,10 +23,9 @@ jobs:
           pip install flake8
           flake8 .
   test:
-    Environment : testing
     env:
-      DB_NAME: ${{secrets.DB_NAME}}
-      DB_USER: ${{secrets.DB_USER}}
+      DB_NAME: tet
+      DB_USER: root
       DB_HOST: localhost
     runs-on: ubuntu-latest
     needs: Lint
