--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -44,11 +44,11 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r requirements.txt
       - name: Run pytest
-        # id: run-tests
+        id: run-tests
         run: |
           export PYTHONPATH=$PYTHONPATH:$(pwd)
           pytest
-        # if: steps.run-tests.outcome == 'failure'
+        if: steps.run-tests.outcome == 'failure'
       - name: Output Information
         run: echo "DB_NAME ${{ env.DB_NAME }}"
   build:
