--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -37,9 +37,9 @@ jobs:
         with: 
           path: ~/.cache/pip
           key: ${{runner.os}}-pip-${{ hashFiles('**/requirements.txt')}}
-          
 
       - name: Install Dependencies
+        if: steps.cache.outputs.cache-hit !='true'
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
@@ -69,6 +69,7 @@ jobs:
         python-version: '3.10'
 
     - name: Install Dependencies
+      if: steps.cache.outputs.cache-hit !='true'
       run: |
         python -m pip install --upgrade pip
         # pip install -r requirements.txt
