--- a/.github/workflows/matrix.yml
+++ b/.github/workflows/matrix.yml
@@ -4,7 +4,7 @@ jobs:
   build:
     strategy:
       matrix:
-        python-version: [3.10,3.11,3.12]
+        python-version: ['3.10','3.11','3.12']
         operating-system: [ubuntu-latest, windows-latest]
 
     runs-on: ${{matrix.operating-system}}
