--- a/.github/workflows/matrix.yml
+++ b/.github/workflows/matrix.yml
@@ -6,6 +6,9 @@ jobs:
       matrix:
         python-version: ['3.10','3.11','3.12']
         operating-system: [ubuntu-latest, windows-latest]
+        include:
+          - python-version: '3.10'
+            operating-system: ubuntu-latest
 
     runs-on: ${{matrix.operating-system}}
     steps:
