corrected both files

--- a/.github/workflows/resuable.yml
+++ b/.github/workflows/resuable.yml
@@ -1,8 +1,11 @@
-name: Resuable Deploy
-on: workflow_call
+name: Reusable Deploy
+
+on:
+  workflow_call:
+
 jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
       - name: Output information
-        run:  echo "Deploying & uploading....."
+        run: echo "Deploying & uploading....."
