--- a/.github/workflows/resue-continue.yml
+++ b/.github/workflows/resue-continue.yml
@@ -1,105 +1,128 @@
-name: Resuable Workflow
-on: push
+name: Reusable Workflow
+
+on:
+  push:
+
 jobs:
-  Lint:
+  lint:
+    name: Lint
     runs-on: ubuntu-latest
     steps:
       - name: Get Code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
-      - name: Cache dependencies
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.10'
+
+      - name: Cache pip dependencies
         uses: actions/cache@v3
         with:
           path: ~/.cache/pip
-          key: ${{runner.os}}-pip-${{ hashFiles('**/requirements.txt')}}
-          restore-key: |
+          key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
+          restore-keys: |
             ${{ runner.os }}-pip-
 
-      - name: Install Dependencies
+      - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-      - name: Lint Code
-        run: |
           pip install flake8
-          flake8 .
+
+      - name: Lint Code
+        run: flake8 .
+
   test:
+    name: Test
+    runs-on: ubuntu-latest
+    needs: lint
     env:
-      DB_NAME: tet
+      DB_NAME: test
       DB_USER: root
       DB_HOST: localhost
-    runs-on: ubuntu-latest
-    needs: Lint
     steps:
       - name: Get Code
-        uses: actions/checkout@v3
-      - name: Cache dependencies
+        uses: actions/checkout@v4
+
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.10'
+
+      - name: Cache pip dependencies
         uses: actions/cache@v3
-        with: 
+        with:
           path: ~/.cache/pip
-          key: ${{runner.os}}-pip-${{ hashFiles('**/requirements.txt')}}
+          key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
 
       - name: Install Dependencies
-        continue-on-error: true
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-      - name: Run pytest
-        id: run-tests
+
+      - name: Run Pytest
         run: |
           export PYTHONPATH=$PYTHONPATH:$(pwd)
           pytest
-        if: steps.run-tests.outcome == 'failure'
+
       - name: Output Information
-        run: echo "DB_NAME ${{ env.DB_NAME }}"
+        run: echo "DB_NAME=${{ env.DB_NAME }}"
+
   build:
+    name: Build
     runs-on: ubuntu-latest
     needs: test
     steps:
-    - name: Get Code
-      uses: actions/checkout@v4
-    - name: Cache dependencies
-      uses: actions/cache@v3
-      with: 
-        path: ~/.cache/pip
-        key: ${{runner.os}}-pip-${{ hashFiles('**/requirements.txt')}}
+      - name: Get Code
+        uses: actions/checkout@v4
 
-    - name: Set up Python
-      uses: actions/setup-python@v5
-      with:
-        python-version: '3.10'
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.10'
 
-    - name: Install Dependencies
-      if: steps.cache.outputs.cache-hit !='true'
-      run: |
-        python -m pip install --upgrade pip
-        # pip install -r requirements.txt
+      - name: Cache pip dependencies
+        id: cache
+        uses: actions/cache@v3
+        with:
+          path: ~/.cache/pip
+          key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
 
-    - name: Build Project
-      run: |
-        echo "Building the project..."
-        mkdir -p dist
-        echo "Sample build output" > dist/output.txt
+      - name: Install Dependencies
+        if: steps.cache.outputs.cache-hit != 'true'
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
 
-    - name: Show build files
-      run: |
-        echo "Files in dist/ before upload"
-        ls -la dist || true
+      - name: Build Project
+        run: |
+          echo "Building the project..."
+          mkdir -p dist
+          echo "Sample build output" > dist/output.txt
 
-    - name: Upload Artifacts
-      uses: actions/upload-artifact@v4
-      with:
-        name: dist-files
-        path: dist
-  deploy:   
-      runs-on: ubuntu-latest
-      needs: build
-      uses: ./.github/workflows/resuable.yml
+      - name: Show build files
+        run: |
+          echo "Files in dist/"
+          ls -la dist
+
+      - name: Upload Artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: dist-files
+          path: dist
+
+  deploy:
+    name: Deploy
+    needs: build
+    uses: ./.github/workflows/reusable-deploy.yml
+
   report:
-    needs: [Lint,deploy]
-    if: failure() 
+    name: Failure Report
+    needs: [lint, deploy]
+    if: failure()
     runs-on: ubuntu-latest
     steps:
       - name: Output information
         run: |
-          echo "Something went wrong"
-          echo "${{github}}"
+          echo "❌ Pipeline failed"
+          echo "${{ github }}"
