providing input value

--- a/.github/workflows/resue-continue.yml
+++ b/.github/workflows/resue-continue.yml
@@ -115,6 +115,9 @@ jobs:
     name: Deploy
     needs: build
     uses: ./.github/workflows/reusable.yml
+    with:
+      artifact-name: dist-files
+    
 
   report:
     name: Failure Report
