--- a/.github/workflows/reusable.yml
+++ b/.github/workflows/reusable.yml
@@ -8,9 +8,19 @@ on:
         required: false
         default: dist
         type: string
+      # secrets:
+      #   some-secret:
+      #     required: false
+      outputs:
+        result: 
+          description: the result is deployment operation
+          value: ${{jobs.deploy.outputs.outcome}}
 
 jobs:
+
   deploy:
+    outputs:
+      outcome: ${{ steps.set-result.outputs.step-result}}
     runs-on: ubuntu-latest
     steps:
       - name: Get Code 
@@ -21,3 +31,6 @@ jobs:
         run: ls
       - name: Output information
         run: echo "Deploying & uploading....."
+      - name: Set result output
+        id: set-result
+        run: echo "::set-output  name= step-result::success"
